@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-26T01:27:37Z",
+  "timestamp" : "2022-07-26T08:18:57Z",
   "count_outdated" : 415,
   "uniques_outdated" : 239,
   "count" : 441,
-  "uniques" : 254,
+  "uniques" : 255,
   "clones" : [
     {
       "timestamp": "2022-07-12T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -86,6 +86,13 @@
       "timestamp": "2022-07-25T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
